--- a/calendar.html
+++ b/calendar.html
@@ -323,7 +323,7 @@ body {
     <div class="settings-panel">
         <div class="toggle-scroll">
           <div class="toggle-item">
-            <div><i class="fa-solid fa-calendar-days"></i></div>
+            <div><i class="fa-solid fa fa-graduation-cap"></i></div>
             <label class="cupertino-switch">
               <input type="checkbox" id="toggleOCC" checked>
               <span class="slider"></span>
