--- a/calendar.html
+++ b/calendar.html
@@ -263,7 +263,7 @@ body {
     .custom-dropdown {
     position: relative;
     display: flex;
-    font-size: 14px;
+    font-size: 11px;
     color: #333;
     background: #fff;
     border-radius: 20px;
@@ -378,7 +378,7 @@ body {
       <div style="margin-top: 20px;display: flex;gap:15px;flex-direction: row;justify-content: space-around;padding: 0px 20px;">
         <select id="colorThemeDropdown" style="padding: 6px; border-radius: 15px; border: none; display: flex;flex: 2;">
           <option value="default">Default</option>
-          <option value="classic">Classic</option>
+          <option value="classic">Classic - YMscheduler</option>
           <option value="beigeTan">Beige Tan</option>
           <option value="tealOrange">Teal Orange</option>
           <option value="midnightPurple">Midnight Purple</option>
@@ -591,9 +591,9 @@ document.getElementById('saveImageBtn').addEventListener('click', function() {
   const paddingValues = {
     none: 0,
     small: 200,
-    medium: 450,
-    large: 600,
-    extraLarge: 900
+    medium: 500,
+    large: 900,
+    extraLarge: 1600
   };
 
   const selectedPadding = paddingValues[paddingDropdown.value] || 0;
@@ -615,7 +615,7 @@ document.querySelector('.fc-view-harness').style.borderRadius = selectedPadding 
 
   // Capture the calendar element with transparency
   html2canvas(calendarEl, {
-    scale: 10, 
+    scale: 8, 
     backgroundColor: backgroundColor, 
     useCORS: true
   }).then(canvas => {
