--- a/calendar.html
+++ b/calendar.html
@@ -378,7 +378,7 @@ body {
       <div style="margin-top: 20px;display: flex;gap:15px;flex-direction: row;justify-content: space-around;padding: 0px 20px;">
         <select id="colorThemeDropdown" style="padding: 6px; border-radius: 15px; border: none; display: flex;flex: 2;">
           <option value="default">Default</option>
-          <option value="classic">Classic - YMscheduler</option>
+          <option value="classic">Classic by YMscheduler</option>
           <option value="beigeTan">Beige Tan</option>
           <option value="tealOrange">Teal Orange</option>
           <option value="midnightPurple">Midnight Purple</option>
